executable(
    'gupnp-dlna-info-2.0',
    files('gupnp-dlna-info.c'),
    dependencies : [
        glib,
        gobject,
        xml,
        config_dep,
        gupnp_dlna
    ],
    install: true
)

executable(
    'gupnp-dlna-ls-profiles-2.0',
    files('gupnp-dlna-ls-profiles.c'),
    dependencies : [
        glib,
        gobject,
        xml,
        config_dep,
        gupnp_dlna
    ],
    install: true
)
