executable(
    'gupnp-dlna-info-2.0',
    files('gupnp-dlna-info.c'),
    dependencies : [
        glib,
        gobject,
        xml,
        gupnp_dlna
    ],
    include_directories : config_h_inc,
    install: true
)

executable(
    'gupnp-dlna-ls-profiles-2.0',
    files('gupnp-dlna-ls-profiles.c'),
    dependencies : [
        glib,
        gobject,
        xml,
        gupnp_dlna
    ],
    include_directories : config_h_inc,
    install: true
)
