gnome.gtkdoc('gupnp-dlna',
             main_xml : 'gupnp-dlna-docs.sgml',
             src_dir : ['libgupnp-dlna'],
             ignore_headers : [
                 'gupnp-dlna-metadata-extractor.h',
                 'gupnp-dlna-gst-container-information.h',
                 'gupnp-dlna-gst-video-information.h',
                 'gupnp-dlna-gst-utils.h',
                 'gupnp-dlna-gst-metadata-extractor.h',
                 'gupnp-dlna-gst-audio-information.h',
                 'gupnp-dlna-gst-info-utils.h',
                 'gupnp-dlna-gst-information.h',
                 'gupnp-dlna-gst-image-information.h',
                 'gupnp-dlna-field-value.h',
                 'gupnp-dlna-metadata-backend.h',
                 'gupnp-dlna-profile-guesser-impl.h',
                 'gupnp-dlna-profile-loader.h',
                 'gupnp-dlna-g-values-private.h',
                 'gupnp-dlna-info-set.h',
                 'gupnp-dlna-info-value.h',
                 'gupnp-dlna-profile-private.h',
                 'gupnp-dlna-restriction-private.h',
                 'gupnp-dlna-utils.h',
                 'gupnp-dlna-value.h',
                 'gupnp-dlna-value-list-private.h',
                 'gupnp-dlna-value-type.h',
                 'gupnp-dlna-value-union.h'
             ],
             content_files : version_xml,
             dependencies : libgupnp_dlna,
             install : true)
